almost done I hope

--- a/assignments/finalProject/01_preprocessing.ipynb
+++ b/assignments/finalProject/01_preprocessing.ipynb
@@ -552,11 +552,11 @@
    "source": [
     "### What do we see?\n",
     "\n",
-    "Overall, many features are not close to normally distributed, instead they are heavily skewed (e.g. Checkup), leaving it questionable if they hav a great predictive power.\n",
+    "Overall, many features are not close to normally distributed, instead they are heavily skewed (e.g. Checkup), leaving it questionable if they have a great predictive power.\n",
     "\n",
-    "The target feature \"Heart_Disease\" is also really skewed, having a baseline of 92% of people that do not have a heart disease. Even though that is great for people's health, it makes it really difficult for our algorithms to find good predictive policies. \n",
+    "The target feature \"Heart_Disease\" is also really skewed, having a baseline of 92% of people that do not have a heart disease. Eventhough that is great for people's health, it makes it really difficult for our algorithms to find good predictive policies. \n",
     "\n",
-    "We can already see that some attributes (sex, age_category, smoking_history,...) have noticeably different distributions for the subpopulation with and without heart disease, leading us to the conclusion that they could play important roles as predictors in the coming machine learnign tasks."
+    "We can already see that some attributes (sex, age_category, smoking_history,...) have noticeably different distributions for the subpopulation with and without heart disease, leading us to the conclusion that they could play important roles as predictors in the coming machine learning tasks:"
    ]
   },
   {
@@ -1192,49 +1192,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'General_Health': 0.0,\n",
-       " 'Checkup': 0.0,\n",
-       " 'Exercise': 0.0,\n",
-       " 'Skin_Cancer': 0.0,\n",
-       " 'Other_Cancer': 0.0,\n",
-       " 'Depression': 0.0,\n",
-       " 'Diabetes': 0.0,\n",
-       " 'Arthritis': 0.0,\n",
-       " 'Sex': 0.0,\n",
-       " 'Age_Category': 0.0,\n",
-       " 'Height_(cm)': 0.0,\n",
-       " 'Weight_(kg)': 0.0,\n",
-       " 'BMI': 0.0,\n",
-       " 'Smoking_History': 0.0,\n",
-       " 'Alcohol_Consumption': 0.0,\n",
-       " 'Fruit_Consumption': 0.0,\n",
-       " 'Green_Vegetables_Consumption': 0.0,\n",
-       " 'FriedPotato_Consumption': 0.0}"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "pValues = {}\n",
-    "for feature in cleaned_data.columns:\n",
-    "    if feature != \"Heart_Disease\":\n",
-    "        group0 = cleaned_data[cleaned_data[\"Heart_Disease\"] == 0][feature]\n",
-    "        group1 = cleaned_data[cleaned_data[\"Heart_Disease\"] == 1][feature]\n",
-    "\n",
-    "        t_stat, p_value = stats.ttest_ind(group0, group1)\n",
-    "        pValues[feature] = round(p_value, 4)\n",
-    "\n",
-    "pValues"
+    "### Regression"
    ]
   },
   {
@@ -1417,7 +1378,8 @@
     "Since ourgoal is to analyse the data in a way that we find comprehensive and actionable predictions and clusters, we must be able to understand the features which we are considering. For the three variables: \"Fruit_Consumption\", \"Green_Vegetables_Consumption\", \"FriedPotato_Consumption\" we could not find a comprehensive explanation what the numbers really mean. If we now received any results of \"FriedPotato_Consumption\">= 10, we could not do anything with it, therefore we delete those three categories as well. Alcohol, also not interpretable!\n",
     "\n",
     "Also, Checkup, bescuase almost all \"Within last Year\"\n",
-    "Als, Age because correlates highly with atritis.\n"
+    "\n",
+    "Also, Age because correlates highly with atritis.\n"
    ]
   },
   {
@@ -4538,6 +4500,13 @@
    "source": [
     "randomly_removed10.to_csv(\"data/dataset_10_missing.csv\", index=False)\n",
     "randomly_removed20.to_csv(\"data/dataset_20_missing.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### save imputed data set to run in unsupervised algorithms"
    ]
   },
   {
