--- a/assignments/finalProject/02_supervisedLearners.ipynb
+++ b/assignments/finalProject/02_supervisedLearners.ipynb
@@ -8,12 +8,15 @@
     "\n",
     "### Supervised Learning algorithms - Predicting heart disease\n",
     "\n",
-    "For every algorithm we optimise one hyperparameter which is important to the specific algortihm."
+    "For every algorithm we optimise one hyperparameter which is important to the specific algortihm.\n",
+    "\n",
+    "\n",
+    "### load packages and preprocessed data, split into train, test and features, criterion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +45,7 @@
        "10000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,39 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "208442    1\n",
-      "147039    0\n",
-      "65257     0\n",
-      "97432     0\n",
-      "110814    0\n",
-      "         ..\n",
-      "40322     0\n",
-      "209641    0\n",
-      "106941    0\n",
-      "84490     0\n",
-      "90622     0\n",
-      "Name: Heart_Disease, Length: 3000, dtype: int64 142702    0\n",
-      "249029    0\n",
-      "49945     0\n",
-      "32884     0\n",
-      "112263    1\n",
-      "         ..\n",
-      "190503    0\n",
-      "305172    0\n",
-      "67054     0\n",
-      "5378      0\n",
-      "287886    0\n",
-      "Name: Heart_Disease, Length: 2100, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# split data into train and test subsets\n",
     "workWith, finalTest = train_test_split(data, test_size = 0.3, train_size=0.7, random_state= 13)\n",
@@ -102,8 +75,7 @@
     "testCrit = test['Heart_Disease']  \n",
     "\n",
     "finalFeatures = finalTest.drop('Heart_Disease', axis=1)  \n",
-    "finalCrit = finalTest['Heart_Disease']  \n",
-    "print(finalCrit, testCrit)"
+    "finalCrit = finalTest['Heart_Disease']  \n"
    ]
   },
   {
@@ -159,7 +131,7 @@
    "source": [
     "### What do we observe?\n",
     "\n",
-    "We know that one of the biggest problems with deision trees is overfitting.\n",
+    "We know that one of the biggest problems with decision trees is overfitting.\n",
     "As we can see here, the classifier has a perfect training performance but the test performance can be improved. \n",
     "\n",
     "We will now use pre-prunning (define the max-depth that the tree should have) to get a worse training but hopefully a better test performance:"
@@ -327,8 +299,7 @@
    "source": [
     "### What does this mean?\n",
     "\n",
-    "Here we saw, that apparently one variable (namely \"General_Health\") is generally so predective that only its' classification is needed to get the overall best accuracy for a subset of 1000 cases, 5 decisions seem to have the best performance for the complete dataset.\n",
-    "Let's see how this behaves in other supervised algorithms."
+    "Here we saw, that we can improve the decision trees perfromance on the test data with pre pruning. With the skewed data however, it all does not make a big difference, since all data is classified as healthy."
    ]
   },
   {
@@ -557,6 +528,15 @@
     "disp.plot(cmap=plt.cm.Blues)  \n",
     "plt.title(f\"Confusion matrix\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What do we observe?\n",
+    "\n",
+    "Again, hyper parameter tuning does not change anything because of the skewed baseline."
    ]
   },
   {
@@ -863,6 +843,15 @@
     "#plt.savefig('supervised-comparing-f1.svg', format='svg')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overall observation\n",
+    "\n",
+    "Accuracy is beyond great, all other performance measures show however, that the algorithms in that form do not help to gain any knowledge or make decisions with regards to heart disease."
    ]
   }
  ],
