--- a/assignments/finalProject/03_Balanced_supervisedLearners.ipynb
+++ b/assignments/finalProject/03_Balanced_supervisedLearners.ipynb
@@ -6,9 +6,8 @@
    "source": [
     "# Final Project - Machine Learning 2024/25\n",
     "\n",
-    "### Supervised Learning algorithms - Predicting heart disease\n",
-    "\n",
-    "For every algorithm we optimise one hyperparameter which is important to the specific algortihm."
+    "### Supervised Learning algorithms - Predicting heart disease with balanced data\n",
+    "\n"
    ]
   },
   {
@@ -50,7 +49,6 @@
    "source": [
     "# read preprocessed data\n",
     "data = pd.read_csv(\"data/balancedData.csv\")\n",
-    "#data = data.sample(1000)\n",
     "len(data)\n"
    ]
   },
@@ -58,37 +56,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "681     1\n",
-      "1601    0\n",
-      "819     1\n",
-      "910     1\n",
-      "330     1\n",
-      "       ..\n",
-      "1404    0\n",
-      "709     1\n",
-      "1340    0\n",
-      "49      1\n",
-      "1008    0\n",
-      "Name: Heart_Disease, Length: 600, dtype: int64 674     1\n",
-      "218     1\n",
-      "580     1\n",
-      "1452    0\n",
-      "97      1\n",
-      "       ..\n",
-      "116     1\n",
-      "251     1\n",
-      "1665    0\n",
-      "68      1\n",
-      "401     1\n",
-      "Name: Heart_Disease, Length: 420, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# split data into train and test subsets\n",
     "workWith, finalTest = train_test_split(data, test_size = 0.3, train_size=0.7, random_state= 13)\n",
@@ -102,8 +70,7 @@
     "testCrit = test['Heart_Disease']  \n",
     "\n",
     "finalFeatures = finalTest.drop('Heart_Disease', axis=1)  \n",
-    "finalCrit = finalTest['Heart_Disease']  \n",
-    "print(finalCrit, testCrit)"
+    "finalCrit = finalTest['Heart_Disease']  \n"
    ]
   },
   {
@@ -132,18 +99,6 @@
     "# print(f\"train data accuracy: {model.score(trainDataWithoutCrit, trainCrit).round(2)}\")\n",
     "# print(f\"test data accuracy: {model.score(testDataWithoutCrit, testCrit).round(2)}\")\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### What do we observe?\n",
-    "\n",
-    "We know that one of the biggest problems with deision trees is overfitting.\n",
-    "As we can see here, the classifier has a perfect training performance but the test performance can be improved. \n",
-    "\n",
-    "We will now use pre-prunning (define the max-depth that the tree should have) to get a worse training but hopefully a better test performance:"
    ]
   },
   {
@@ -277,6 +232,15 @@
     "disp.plot(cmap=plt.cm.Blues)  \n",
     "plt.title(f\"Confusion matrix\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observations\n",
+    "\n",
+    "With balanced data, we can optimise the pre pruning and the result is an interpretable, actionable decision tree."
    ]
   },
   {
@@ -497,6 +461,15 @@
     "disp.plot(cmap=plt.cm.Blues)  \n",
     "plt.title(f\"Confusion matrix\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observations\n",
+    "\n",
+    "Learning rate still does not majorly influence the MLPs performance (but maybe the runtime), but the architecture makes a big difference."
    ]
   },
   {
