--- a/assignments/finalProject/04_supervisedLearnersWithMissingd.ipynb
+++ b/assignments/finalProject/04_supervisedLearnersWithMissingd.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "# Final Project - Machine Learning 2024/25\n",
     "\n",
-    "### Supervised Learning algorithms - Predicting heart disease"
+    "### Supervised Learning algorithms - Predicting heart disease with NAs in the original data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,39 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "245325    0\n",
-      "182939    0\n",
-      "69861     0\n",
-      "18663     0\n",
-      "170784    0\n",
-      "         ..\n",
-      "11490     0\n",
-      "39465     0\n",
-      "245878    1\n",
-      "62695     0\n",
-      "209872    0\n",
-      "Name: Heart_Disease, Length: 435, dtype: int64 293294    0\n",
-      "210542    0\n",
-      "141819    0\n",
-      "42215     1\n",
-      "11363     0\n",
-      "         ..\n",
-      "36745     0\n",
-      "197421    0\n",
-      "61652     0\n",
-      "286745    0\n",
-      "158223    0\n",
-      "Name: Heart_Disease, Length: 306, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# split data into train and test subsets\n",
     "workWith, finalTest  = train_test_split(data_10Missings, test_size = 0.3, train_size=0.7, random_state= 13)\n",
@@ -102,8 +72,7 @@
     "testCrit = test['Heart_Disease']  \n",
     "\n",
     "finalFeatures = finalTest.drop('Heart_Disease', axis=1)  \n",
-    "finalCrit = finalTest['Heart_Disease']  \n",
-    "print(finalCrit, testCrit)"
+    "finalCrit = finalTest['Heart_Disease']  \n"
    ]
   },
   {
@@ -982,6 +951,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The performance will fluctuate with the heartdisease percentage with is prevalent in the small subset which is left from the whole data set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Overall Performances of different supervised learning algorithms with CCA"
    ]
   },
@@ -1014,6 +990,13 @@
     "plt.show()\n",
     "\n",
     "averagePerformanceCCA = sum(allAccuracies)/len(allAccuracies)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Percentage of data left:"
    ]
   },
   {
@@ -1336,7 +1319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multi-layer perceptron"
+    "### Multi-layer perceptron"
    ]
   },
   {
@@ -3166,7 +3149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3190,8 +3173,7 @@
     "ax.set_ylim([0.8, 1])\n",
     "ax.set_ylabel(\"prediction accuracy\")\n",
     "ax.set_title(\"average prediction accuracy of different heart disease classification algorithms with three different NA handling techniques\")\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()\n"
    ]
   },
   {
